--- a/playbook.yaml
+++ b/playbook.yaml
@@ -253,6 +253,13 @@
     apt:
       name: scalpel
       state: present
+      
+  - name: provision bulk extractor
+    become: yes
+    become_method: sudo
+    apt:
+      name: bulk-extractor
+      state: present
 
   - name: Inform the playbook has finished
     ansible.builtin.debug:
